--- a/luiz.html
+++ b/luiz.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body class="Principal">
-    <h1 class="texto"></h1>
+    <h1 class="texto">Bem-vindo ao noso site.</h1>
+    <h2 class="texto2"> aqui falaremos</h2>
 </body>
 </html>
