--- a/luiz.html
+++ b/luiz.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body class="Principal">
-    <h1 class="texto">Bem-vindo ao noso site.</h1>
-    <h2 class="texto2"> aqui falaremos</h2>
+<body>
+    <h1>Bom Dia</h1>
 </body>
 </html>
