--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Bom Dia</h1>
+
+    <nav class="barra">
+   <div class="links">
+    <link rel="stylesheet" href="leonardo.html">
+    <link rel="stylesheet" href="liliah.html">
+    <link rel="stylesheet" href="melissa.html">
+    <link rel="stylesheet" href="wender.html">
+    </nav>
+   </div>
 </body>
 </html>
