--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-
+    <div class="links">
     <nav class="barra">
-   <div class="links">
     <link rel="stylesheet" href="leonardo.html">
     <link rel="stylesheet" href="liliah.html">
     <link rel="stylesheet" href="melissa.html">
     <link rel="stylesheet" href="wender.html">
     </nav>
    </div>
+
+   <div>
+   </div>
+
 </body>
 </html>
