--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body class="pagina principal">
     <div class="links">
     <nav class="barra">
     <link rel="stylesheet" href="leonardo.html">
