--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body class="pagina principal">
+<body class="principal">
     
     <div class="links">
     <nav class="barra">
@@ -16,7 +16,7 @@
     </nav>
    </div>
 
-   <div>
+   <div class="Titulo">
     <h1>bom dia</h1>
     <p>nkgjhfjvj</p>
    </div>
