--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     </nav>
    </div>
 
-   <div class="Titulo">
-    <h1>bom dia</h1>
+    <h1 class="Titulo">bom dia</h1>
     <p>nkgjhfjvj</p>
    </div>
 
