--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body class="principal"> 
+
+   <div class="titulo"></div>
+
     <div class="links">
     <nav class="barra">
     <link rel="stylesheet" href="leonardo.html">
@@ -15,9 +18,6 @@
     </nav>
    </div>
 
-    <h1 class="Titulo">bom dia</h1>
-    <p>nkgjhfjvj</p>
-   </div>
 
 </body>
 </html>
