--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body class="principal"> 
 
-   <div class="titulo"></div>
+   <div class="titulo">
+    <h1>Clovis</h1>
+   </div>
 
     <div class="links">
     <nav class="barra">
