--- a/index.html
+++ b/index.html
@@ -3,23 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Clovis</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body class="principal"> 
-
-   <div class="titulo">
-    <h1>Clovis</h1>
-   </div>
-
-    <div class="links">
-    <nav class="barra">
-    <link rel="stylesheet" href="leonardo.html">
-    <link rel="stylesheet" href="liliah.html">
-    <link rel="stylesheet" href="melissa.html">
-    <link rel="stylesheet" href="wender.html">
-    </nav>
-   </div>
-
-
+<body class="principal">
+ <h1>Clóvis</h1>
+ <nav>
+    <ul>
+        <li><button onclick="window.location.href'=leonardo.html';">fertilizantes</button></li>
+    </ul>
+ </nav>
 </body>
 </html>
