--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body class="principal">
  <h1>Clóvis</h1>
+ <nav>
+    <ul>
+        <li><button onclick="window.location.href='leonardo.html';">Fertilizantes</button></li>
+    </ul>
+ </nav>
 </body>
 </html>
