--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
  <nav>
     <ul>
         <li><button onclick="window.location.href='leonardo.html';">Fertilizantes</button></li>
+        <li><button onclick="window.location.href='liliah.html';">AgroToxicos</button></li>
     </ul>
  </nav>
 </body>
