--- a/melissa.html
+++ b/melissa.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <h1>Receitas incríveis reaproveitando os alimentos da sua geladeira!</h1>
+    <p>Você sabia que hoje cerca de 30% da produção de alimentos é desperdiçada no Brasil e que parte deste desperdício
+        também acontece dentro de casa?
+
+        Por isso te convidamos a entrar nesta luta contra o desperdício de alimentos com a gente! Para te ajudar,
+        selecionamos algumas receitas deliciosas para você reaproveitar o que tem na geladeira e transformar em pratos
+        incríveis e cheios de sabor.</p>
 </body>
+
 </html>
