--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
  <nav>
     <ul>
         <li><button onclick="window.location.href='leonardo.html';">Fertilizantes</button></li>
-        <li><button onclick="window.location.href='liliah.html';">AgroToxicos</button></li>
+        <li><button onclick="window.location.href='liliah.html';">Agrotóxicos</button></li>
+        <li><button onclick="window.location.href='melissa.html';">Receitas</button></li>
+        <li><button onclick="window.location.href='wender.html';">.</button></li>
     </ul>
  </nav>
 </body>
