--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
  <h1>Clóvis</h1>
  <nav>
     <ul>
-        <li><button onclick="window.location.href='leonardo.html';">Fertilizantes</button></li>
+        <li><button onclick="window.location.href='leonardo.html';">Adubos</button></li>
         <li><button onclick="window.location.href='liliah.html';">Agrotóxicos</button></li>
         <li><button onclick="window.location.href='melissa.html';">Receitas</button></li>
-        <li><button onclick="window.location.href='wender.html';">.</button></li>
+        <li><button onclick="window.location.href='wender.html';">Platação e o seu benefícios</button></li>
     </ul>
  </nav>
 </body>
