--- a/melissa.html
+++ b/melissa.html
@@ -5,16 +5,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+ <!-- Vínculo com a folha de estilo externa -->
+ <link rel="stylesheet" href="melissa.css">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Receitas incríveis reaproveitando os alimentos da sua geladeira!</h1>
-    <p>Você sabia que hoje cerca de 30% da produção de alimentos é desperdiçada no Brasil e que parte deste desperdício
-        também acontece dentro de casa?
+ <!-- Cabeçalho da página -->
+ <header>
+   <div id="header-content">
+     <!-- Título principal da página -->
+     <h1 class="nome">Astro</h1>
+     <!-- Navegação do site -->
+     <nav>
+       <ul>
+         <!-- Links de navegação para seções da página usando âncoras -->
+         <li><a href="./index.html">inicio</a></li>
+         <li><a href="./ofertas.html">xxx</a></li>
+         <li><a href="./masculino.html">xxxx</a></li>
+         <li><a href="./feminino.html">xxxx</a></li>
+         
+       </ul>
+     </nav>
+   </div>
+ </header>
 
-        Por isso te convidamos a entrar nesta luta contra o desperdício de alimentos com a gente! Para te ajudar,
-        selecionamos algumas receitas deliciosas para você reaproveitar o que tem na geladeira e transformar em pratos
-        incríveis e cheios de sabor.</p>
+ <!-- Conteúdo principal da página -->
+ <main class="mainzao">
+   <!-- Título principal da seção -->
+   
+     <h1>Modelos</h1>
+
+     <div class="grid">
+       <div class="produtoss">
+           <img class="ofertass" src="https://down-br.img.susercontent.com/file/0e1e7e6cdb25ab952d48e2fb08a70dd6" alt="">
+           <div class="detalhes-produto">
+               <p class="preco">R$ 1.150,00</p>
+               <button class="btn-comprar">Comprar</button>
+           </div>
+       </div>
+   
+       <div class="produtoss">
+           <img class="ofertass" src="https://down-br.img.susercontent.com/file/br-11134207-7r98o-ln31mttnq88zee" alt="">
+           <div class="detalhes-produto">
+               <p class="preco">R$ 920,00</p>
+               <button class="btn-comprar">Comprar</button>
+           </div>
+       </div>
+   
+       <div class="produtoss">
+           <img class="ofertass" src="https://i.ebayimg.com/thumbs/images/g/l~MAAOSwqhpkSZxk/s-l640.jpg" alt="">
+           <div class="detalhes-produto">
+               <p class="preco">R$ 900,00</p>
+               <button class="btn-comprar">Comprar</button>
+           </div>
+       </div>
+   
+       <div class="produtoss">
+           <img class="ofertass" src="https://s3.amazonaws.com/thecustommovement-userfiles-mobilehub-569930456/35dc260f-37fc-45d7-a8cb-b1268121751c" alt="">
+           <div class="detalhes-produto">
+               <p class="preco">R$ 710,00</p>
+               <button class="btn-comprar">Comprar</button>
+           </div>
+       </div>
+   </div>
+   
+ </main>
+ <br><br>
+
+ <!-- Rodapé da página -->
+ <footer>
+   <!-- Texto de rodapé com informações de direitos autorais ou outros detalhes -->
+   <p class="fim">Loja Astro, cada passo é único.</p>
+ </footer>
+
 </body>
 
 </html>
