--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body class="principal">
- <h1>Clóvis</h1>
- <nav>
-    <ul>
+    <header>
         <li><button onclick="window.location.href='leonardo.html';">Adubos</button></li>
         <li><button onclick="window.location.href='liliah.html';">Agrotóxicos</button></li>
         <li><button onclick="window.location.href='melissa.html';">Receitas</button></li>
         <li><button onclick="window.location.href='wender.html';">Platação e o seu benefícios</button></li>
-    </ul>
- </nav>
+    </header>
+    <h1>Clovis</h1>
 </body>
 </html>
