--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <body class="principal">
     <header>
+        <div class="titulo">
+         <h1>Clóvis</h1>
+        </div>
+        <div class="botões">
         <li><button onclick="window.location.href='leonardo.html';">Adubos</button></li>
         <li><button onclick="window.location.href='liliah.html';">Agrotóxicos</button></li>
         <li><button onclick="window.location.href='melissa.html';">Receitas</button></li>
         <li><button onclick="window.location.href='wender.html';">Platação e o seu benefícios</button></li>
+    </div>
     </header>
-    <h1>Clovis</h1>
 </body>
 </html>
