--- a/leonardo.html
+++ b/leonardo.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>sempre quis ter o seu próprio jardim, mas vive num apartemento sum esço exterior</p>
+<p>O segrdo é escolher um vaso de solo que seja grande o suficiente para dar espaço para as plantas crescerem e que tenha um sistema de drenagem que permita que o solo permaneça úmido, mas não estagnado</p>
+<p>eles também precisam de luz natural suficiente para crescer. É aconselhável colocar o adubo em local onde receba de 4 a 6 horas de sol direto por dia. Se você não tiver uma janela com boa iluminação, poderá usar uma lâmpada de cultivo para garantir que suas plantas recebam o nível certo de luz.</p>
+
+
+
+
 </body>
 </html>
