--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
     <title>Clovis</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body class="principal">
-    <header>
-        <div class="titulo">
-         <h1>Clóvis</h1>
-        </div>
-        <div class="botões">
-        <li><button onclick="window.location.href='leonardo.html';">Adubos</button></li>
-        <li><button onclick="window.location.href='liliah.html';">Agrotóxicos</button></li>
-        <li><button onclick="window.location.href='melissa.html';">Receitas</button></li>
-        <li><button onclick="window.location.href='wender.html';">Platação e o seu benefícios</button></li>
+<body>
+    <div class="header">
+        <H1>Clovis</H1>
+        <li class="botão" onclick="window.location.href='leonardo.html'>Adubos</li>
+        <li class="botão onclick="window.location.href='liliah.html'>Agrotóxicos</li>
+        <li class="botão onclick="window.location.href='melissa.html'>Receitas</li>
+        <li class="botão onclick="window.location.href='wender.html'>Plantações</li>
+
     </div>
     </header>
 </body>
