--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <title>Clovis</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
-    <div class="header">
-        <H1>Clovis</H1>
-        <li class="botão" onclick="window.location.href='leonardo.html'>Adubos</li>
-        <li class="botão onclick="window.location.href='liliah.html'>Agrotóxicos</li>
-        <li class="botão onclick="window.location.href='melissa.html'>Receitas</li>
-        <li class="botão onclick="window.location.href='wender.html'>Plantações</li>
-
-    </div>
+<body>]
+    <header>
+        <div class="titulo">
+            <h1>Clóvis</h1>
+        </div>
+        <div class="botoes">
+            <button onclick="window.location.href='leonardo.html'">Adubos</button>
+            <button onclick="window.location.href='liliah.html'">Agrotóxicos</button>
+            <button onclick="window.location.href='melissa.html'">Receitas</button>
+            <button onclick="window.location.href='wender.html'">Plantações</button>
+        </div>
     </header>
 </body>
 </html>
