--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Clovis</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>]
+<body>
     <header>
         <div class="titulo">
             <h1>Clóvis</h1>
