--- a/melissa.html
+++ b/melissa.html
@@ -45,7 +45,7 @@
        </div>
    
        <div class="produtoss">
-           <img class="ofertass" src="https://s3.amazonaws.com/thecustommovement-userfiles-mobilehub-569930456/35dc260f-37fc-45d7-a8cb-b1268121751c" alt="">
+           <img class="ofertass" src="https://www.assai.com.br/sites/default/files/receita_de_brigadeiro_de_banana_-_assai_atacadista.jpg" alt="">
            <div class="detalhes-produto">
                
                <button class="btn-comprar">Comprar</button>
