--- a/receita1.html
+++ b/receita1.html
@@ -6,7 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>receitas para reaproveitar alimentos</h1>
+<br>
+    <p>ingredientes</p>
+ 3 xicaras  de casca de batata
+ 1 pitada de sal
+ 1 litro de oleo
+ <p>modo de preparo</p>
+coloque oleo em uma panela e leve ao fogo.
+lave as cascas de batata e as seque bem.
+assim que o oleo estiver quente coloque as para fritar.
+quando estiver douradas retire da panela 
+coloque sal e aproveite esta delicia!!!
 
 
 
