--- a/receita2.html
+++ b/receita2.html
@@ -23,8 +23,11 @@
         1\2 xicaras de oleo 
         2 colheres de margarina 
         1 xicara de leite
-        2 colheres de cha  de fermento em p</p>
+        2 colheres de cha  de fermento em po </p>
+<p>modo de preparo</p>
+<p>coloque todos os ingredientes no liquidificador e 
 
+</p>
 
 
 
