--- a/wender.html
+++ b/wender.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="wender.css">
     <title>Document</title>
 </head>
 
 <body>
 
-    <h1>TOMATE CEREJA =</h1>
+    <h1>TOMATE CEREJA </h1>
     <p>Ter um lugar reservado para que ela receba luz solar, elas adoram luz e sem a luz elas acabam murchando ou
         morrendo, e importante plantar na época de verão
         OBS : É IMPORTANTE PLANTAR NA ÉPOCA DE VERÃO.</p>
