--- a/wender.html
+++ b/wender.html
@@ -9,7 +9,18 @@
 </head>
 
 <body>
-
+    <header>
+        <div class="titulo">
+            <h1>Clóvis</h1>
+        </div>
+        <div class="botoes">
+            <button onclick="window.location.href='leonardo.html'">Adubos</button>
+            <button onclick="window.location.href='liliah.html'">Agrotóxicos</button>
+            <button onclick="window.location.href='melissa.html'">Receitas</button>
+            <button onclick="window.location.href='wender.html'">Plantações</button>
+        </div>
+    </header>
+    
     <h1>TOMATE CEREJA </h1>
     <p>Ter um lugar reservado para que ela receba luz solar, elas adoram luz e sem a luz elas acabam murchando ou
         morrendo, e importante plantar na época de verão
