--- a/wender.html
+++ b/wender.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="wender.css">
+
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
@@ -20,7 +21,7 @@
             <button onclick="window.location.href='wender.html'">Plantações</button>
         </div>
     </header>
-    
+
     <h1>TOMATE CEREJA </h1>
     <p>Ter um lugar reservado para que ela receba luz solar, elas adoram luz e sem a luz elas acabam murchando ou
         morrendo, e importante plantar na época de verão
