--- a/receita3.html
+++ b/receita3.html
@@ -9,7 +9,34 @@
     
 <h1> Bolinho de Arroz</h1>
 <br>
-<p>Ingredientes</p>
+<p> </p>
+<h1>Ingredientes</h1>
+
+
+<p>I3 xícaras (chá) de arroz cozido
+    <li>  1\2 xícara (chá) de leite</li>
+    <li></li>1 colher (sopa) de fermento em pó 
+    1\2 xícara (chá) de farinha de trigo
+    óleo para fritar
+    
+    1\2 xícara (chá) de queijo ralado
+    2 colheres (sopa) de cheiro-verde picado
+    1\2 xícara (chá) de amido de milho
+    3 ovos (cru)</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+</p>
 
 
 
