--- a/melissa.html
+++ b/melissa.html
@@ -33,6 +33,7 @@
            <div class="detalhes-produto">
                
                <button class="btn-comprar">Comprar</button>
+               <button onclick="window.location.href='receita1.html'"></button>
            </div>
        </div>
    
