--- a/receita3.html
+++ b/receita3.html
@@ -8,14 +8,13 @@
 <body>
     
 <h1> Bolinho de Arroz</h1>
-<br>
-<p> </p>
+
 <h1>Ingredientes</h1>
 
 
-<p>I3 xícaras (chá) de arroz cozido
-    <li>  1\2 xícara (chá) de leite</li>
-    <li>      </li>1 colher (sopa) de fermento em pó 
+<li>I3 xícaras (chá) de arroz cozido</li>
+    <li>1\2 xícara (chá) de leite</li>
+    <li>1 colher (sopa) de fermento em pó 
     1\2 xícara (chá) de farinha de trigo
     óleo para fritar
     
