--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
             <button onclick="window.location.href='melissa.html'">Receitas</button>
             <button onclick="window.location.href='wender.html'">Plantações</button>
         </div>
+    </header>
+    <div>
         <div class="Primeira-Parte">
             <h1>Bem-vindo</h1>
             <p>Esse site é mais informativo</p>
-        </div>
-    </header>
+    </div>
 </body>
 </html>
