--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div>
         <div class="Primeira-Parte">
             <h1>Bem-vindo</h1>
-            <p>Esse site é mais informativo</p>
+            <p>Esse site é mais informativo, tiver alguma duvida manda o email para nós.</p>
     </div>
 </body>
 </html>
